feat(cuda): implement VRAM-backed SDM switching fabric
This commit fundamentally overhauls the GhostLink architecture by introducing a VRAM-Backed Non-Blocking Switching fabric. We accomplish this via the Java 24 FFM API invoking NVIDIA CUDA Driver operations directly.

- Implemented cuMemAlloc, cuIpcGetMemHandle, cuIpcOpenMemHandle in GhostCudaFabric.

- Set up 100 dedicated Spatial Division Multiplexed lanes.

- Removed CAS logic; substituted with pure CUDA point-to-point writing.

- Created GhostCudaProducer, GhostCudaConsumer, and CudaApp tests.